# mentat

./: .babelrc  .gitignore  .taskcluster.yml  .travis.yml  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  android_build_all.sh  cargo-config.toml.template  index.html  mentat.sh  node.clj  package.json  project.clj  repl.clj  search-index.js
core/: Cargo.toml
core-traits/: Cargo.toml  lib.rs  value_type_set.rs
core/src/: cache.rs  counter.rs  intern_set.rs  lib.rs  sql_types.rs  tx_report.rs  types.rs  util.rs  value_type_set.rs  values.rs
db/: Cargo.toml  README.md
db-traits/: Cargo.toml  errors.rs  lib.rs
db/src/: add_retract_alter_set.rs  bootstrap.rs  cache.rs  db.rs  debug.rs  diff_set.rs  entids.rs  errors.rs  excision.rs  internal_types.rs  lib.rs  metadata.rs  schema.rs  timelines.rs  tx.rs  tx_checking.rs  tx_observer.rs  types.rs  upsert_resolution.rs  values.rs  watcher.rs
db/tests/: tx_observer_tests.rs  value_tests.rs
edn/: Cargo.toml  README.md  build.rs  enum.UuidParseError.html  index.html  macro.ns_keyword.html  sidebar-items.js  struct.BigInt.html  struct.DateTime.html  struct.OrderedFloat.html  struct.Utc.html  struct.Uuid.html
edn/entities/: TransactableValueMarker.t.html  enum.AttributePlace.html  enum.EntidOrIdent.html  enum.Entity.html  enum.EntityPlace.html  enum.OpType.html  enum.TempId.html  enum.ValuePlace.html  index.html  sidebar-items.js  struct.LookupRef.html  struct.TxFunction.html  trait.TransactableValueMarker.html  type.MapNotation.html
edn/intern_set/: index.html  struct.InternSet.html
edn/matcher/: index.html
edn/parse/: fn.basedinteger.html  fn.bigint.html  fn.boolean.html  fn.entities.html  fn.entity.html  fn.float.html  fn.hexinteger.html  fn.infinity.html  fn.integer.html  fn.keyword.html  fn.list.html  fn.map.html  fn.nan.html  fn.nil.html  fn.octalinteger.html  fn.op.html  fn.parse_query.html  fn.raw_basedinteger.html  fn.raw_bigint.html  fn.raw_float.html  fn.raw_hexinteger.html  fn.raw_integer.html  fn.raw_octalinteger.html  fn.raw_text.html  fn.set.html  fn.symbol.html  fn.text.html  fn.uuid.html  fn.value.html  fn.vector.html  fn.where_fn.html  index.html  raw_integer.v.html  struct.ParseError.html  type.ParseResult.html  uuid.v.html
edn/pretty_print/: index.html
edn/query/: FindSpec.t.html  NamedPullAttribute.t.html  ParsedQuery.t.html  Pull.t.html  PullConcreteAttribute.t.html  enum.Binding.html  enum.Direction.html  enum.Element.html  enum.FindSpec.html  enum.FnArg.html  enum.IdentOrEntid.html  enum.Limit.html  enum.NonIntegerConstant.html  enum.OrWhereClause.html  enum.PatternNonValuePlace.html  enum.PatternValuePlace.html  enum.PullAttributeSpec.html  enum.PullConcreteAttribute.html  enum.SrcVar.html  enum.UnifyVars.html  enum.VariableOrPlaceholder.html  enum.WhereClause.html  index.html  struct.Aggregate.html  struct.NamedPullAttribute.html  struct.NotJoin.html  struct.OrJoin.html  struct.Order.html  struct.ParsedQuery.html  struct.Pattern.html  struct.Predicate.html  struct.Pull.html  struct.QueryFunction.html  struct.TypeAnnotation.html  struct.Variable.html  struct.WhereFn.html  trait.ContainsVariables.html  trait.FromValue.html  type.SrcVarName.html
edn/src/: edn.rustpeg  entities.rs  intern_set.rs  keyword.rs  lib.rs  matcher.rs  namespaceable_name.rs  namespaced_name.rs  pretty_print.rs  query.rs  symbols.rs  text_diff.rs  types.rs  types_pp.rs  utils.rs  value_rc.rs
edn/symbols/: NamespacedSymbol.t.html  index.html  sidebar-items.js  struct.Keyword.html  struct.NamespacedSymbol.html  struct.PlainSymbol.html
edn/tests/: query_tests.rs  serde_support.rs  tests.rs
edn/types/: ToMillis.t.html  enum.SpannedValue.html  enum.Value.html  index.html  sidebar-items.js  struct.Span.html  struct.ValueAndSpan.html  trait.FromMicros.html  trait.FromMillis.html  trait.ToMicros.html  trait.ToMillis.html
edn/utils/: fn.merge.html  index.html
edn/value_rc/: Cloned.t.html  index.html  trait.Cloned.html  trait.FromRc.html  type.ValueRc.html
ffi/: Cargo.toml  README.md
ffi/src/: android.rs  lib.rs  types.rs  utils.rs
public-traits/: Cargo.toml  errors.rs  lib.rs
query-algebrizer/: Cargo.toml  README.md
query-algebrizer/src/: cc.rs  errors.rs  lib.rs  types.rs  validate.rs
query-algebrizer/src/clauses/: convert.rs  fulltext.rs  ground.rs  inputs.rs  mod.rs  not.rs  or.rs  pattern.rs  predicate.rs  resolve.rs  tx_log_api.rs  where_fn.rs
query-algebrizer/tests/: fulltext.rs  ground.rs  predicate.rs  type_reqs.rs
query-algebrizer/tests/utils/: mod.rs
query-parser/: Cargo.toml  README.md
query-parser/src/: error.rs  errors.rs  find.rs  lib.rs  parse.rs  parser_util.rs  util.rs
query-parser/tests/: find_tests.rs
query-projector/: Cargo.toml  README.md
query-projector-traits/: Cargo.toml  aggregates.rs  errors.rs  lib.rs
query-projector-traits/tests/: aggregates.rs
query-projector/src/: aggregates.rs  binding_tuple.rs  errors.rs  lib.rs  project.rs  pull.rs  relresult.rs  translate.rs
query-projector/src/projectors/: constant.rs  mod.rs  pull_two_stage.rs  simple.rs
query-projector/tests/: aggregates.rs  translate.rs
query-pull/: Cargo.toml
query-pull/src/: errors.rs  lib.rs
query-sql/: Cargo.toml
query-sql/src/: lib.rs
query-translator/: Cargo.toml  README.md
query-translator/src/: lib.rs  translate.rs  types.rs
query-translator/tests/: translate.rs
sql/: Cargo.toml  README.md
sql/src/: lib.rs
tolstoy/: Cargo.toml  README.md
tolstoy-traits/: Cargo.toml  errors.rs  lib.rs
tolstoy/src/: bootstrap.rs  datoms.rs  debug.rs  errors.rs  lib.rs  logger.rs  metadata.rs  remote_client.rs  schema.rs  syncer.rs  tx_client.rs  tx_mapper.rs  tx_processor.rs  tx_uploader.rs  types.rs
tools/cli/: Cargo.toml
tools/cli/src/mentat_cli/: command_parser.rs  errors.rs  input.rs  lib.rs  repl.rs  store.rs
transaction/: Cargo.toml
transaction/src/: entity_builder.rs  lib.rs  metadata.rs  query.rs
tx-parser/: Cargo.toml  benches.txt  benches2.txt
tx-parser/benches/: bench.rs
tx-parser/src/: errors.rs  lib.rs
tx-parser/tests/: parser.rs
(+18360 files in other folders)
