[package]
authors = [
  "Richard Newman <rnewman@twinql.com>",
  "Nicholas Alexander <nalexander@mozilla.com>",
  "Victor Porof <vporof@mozilla.com>",
  "Jordan Santell <jsantell@mozilla.com>",
  "Joe Walker <jwalker@mozilla.com>",
  "Emily Toop <etoop@mozilla.com>",
  "Grisha Kruglov <grigory@kruglov.ca>",
  "Kit Cambridge <kit@yakshaving.ninja>",
  "Edouard Oger <eoger@fastmail.com>",
  "Thom Chiovoloni <tchiovoloni@mozilla.com>",
]
name = "mentat"
version = "0.7.0"
build = "build/version.rs"

[features]
default = ["bundled_sqlite3"]
bundled_sqlite3 = ["rusqlite/bundled"]
sqlcipher = ["rusqlite/sqlcipher", "mentat_db/sqlcipher"]

[workspace]
members = ["tools/cli", "ffi"]

[build-dependencies]
rustc_version = "0.2"

[dependencies]
chrono = "0.4"
failure = "0.1.1"
failure_derive = "0.1.1"
lazy_static = "0.2"
time = "0.1"
uuid = { version = "0.5", features = ["v4", "serde"] }

[dependencies.rusqlite]
version = "0.13"
# System sqlite might be very old.
features = ["limits"]

[dependencies.edn]
path = "edn"

[dependencies.mentat_core]
path = "core"

[dependencies.mentat_sql]
path = "sql"

[dependencies.mentat_db]
path = "db"

[dependencies.mentat_query]
path = "query"

[dependencies.mentat_query_algebrizer]
path = "query-algebrizer"

[dependencies.mentat_query_projector]
path = "query-projector"

[dependencies.mentat_query_pull]
path = "query-pull"

[dependencies.mentat_query_sql]
path = "query-sql"

[dependencies.mentat_query_translator]
path = "query-translator"

[dependencies.mentat_tolstoy]
path = "tolstoy"

[profile.release]
opt-level = 3
debug = false
lto = true
