[package]
name = "mentat_core"
version = "0.0.1"
workspace = ".."

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
enum-set = { git = "https://github.com/rnewman/enum-set" }
indexmap = "1"
lazy_static = "0.2"
num = "0.1"
ordered-float = { version = "0.5", features = ["serde"] }
uuid = { version = "0.5", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"

[dependencies.edn]
path = "../edn"
features = ["serde_support"]
