[package]
name = "mentat_core"
version = "0.0.1"
workspace = ".."

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
enum-set = "0.0.7"
failure = "0.1.1"
indexmap = "1"
lazy_static = "0.2"
ordered-float = { version = "0.5", features = ["serde"] }
uuid = { version = "0.5", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"

[dependencies.edn]
path = "../edn"
features = ["serde_support"]
