[package]
name = "db_traits"
version = "0.0.1"
workspace = ".."

[lib]
name = "db_traits"
path = "lib.rs"

[features]
sqlcipher = ["rusqlite/sqlcipher"]

[dependencies]
failure = "0.1.2"
failure_derive = "0.1.2"

[dependencies.edn]
path = "../edn"

[dependencies.core_traits]
path = "../core-traits"

[dependencies.rusqlite]
version = "0.13"
features = ["limits"]
