[package]
name = "mentat_db"
version = "0.0.1"
workspace = ".."

[features]
default = []
sqlcipher = ["rusqlite/sqlcipher"]

[dependencies]
failure = "0.1.1"
failure_derive = "0.1.1"
indexmap = "1"
itertools = "0.7"
lazy_static = "0.2"
log = "0.4"
num = "0.1"
ordered-float = "0.5"
time = "0.1"
petgraph = "0.4.12"

[dependencies.rusqlite]
version = "0.13"
features = ["limits"]

[dependencies.edn]
path = "../edn"

[dependencies.mentat_core]
path = "../core"

[dependencies.mentat_sql]
path = "../sql"

# Should be dev-dependencies.
[dependencies.tabwriter]
version = "1.0.3"

[dev-dependencies]
env_logger = "0.5"
