[package]
name = "edn"
version = "0.1.0"
authors = ["Joe Walker <jwalker@mozilla.com>"]
workspace = ".."

license = "Apache-2.0"
repository = "https://github.com/mozilla/mentat"
description = "EDN parser for Project Mentat"
build = "build.rs"
readme = "./README.md"

[dependencies]
chrono = "0.4"
itertools = "0.7"
num = "0.1"
ordered-float = "0.5"
pretty = "0.2"
uuid = "0.5"
serde = "1.0"
serde_derive = "1.0"

[build-dependencies]
peg = "0.5"
