[package]
name = "mentat_ffi"
version = "0.0.1"
authors = ["Emily Toop <etoop@mozilla.com>"]

[lib]
name = "mentat_ffi"
crate-type = ["lib", "staticlib", "cdylib"]

[features]
default = ["bundled_sqlite3"]
sqlcipher = ["mentat/sqlcipher"]
bundled_sqlite3 = ["mentat/bundled_sqlite3"]

[dependencies]
libc = "0.2"

[dependencies.mentat]
path = "../"
default-features = false
