[package]
name = "mentat_query_algebrizer"
version = "0.0.1"
workspace = ".."

[dependencies]
error-chain = { git = "https://github.com/rnewman/error-chain", branch = "rnewman/sync" }

[dependencies.mentat_core]
path = "../core"

[dependencies.mentat_query]
path = "../query"

[dev-dependencies]
itertools = "0.7"
