[package]
name = "mentat_query_algebrizer"
version = "0.0.1"
workspace = ".."

[dependencies]
failure = "0.1.1"
failure_derive = "0.1.1"

[dependencies.edn]
path = "../edn"

[dependencies.mentat_core]
path = "../core"

[dependencies.core_traits]
path = "../core-traits"

[dev-dependencies]
itertools = "0.7"
