[package]
name = "mentat_query_algebrizer"
version = "0.0.1"
workspace = ".."

[dependencies]
failure = "0.1.2"

[dependencies.edn]
path = "../edn"

[dependencies.mentat_core]
path = "../core"

[dependencies.core_traits]
path = "../core-traits"

[dependencies.query_algebrizer_traits]
path = "../query-algebrizer-traits"

[dev-dependencies]
itertools = "0.7"
