[package]
name = "mentat_query_parser"
version = "0.0.1"
workspace = ".."

[dependencies]
combine = "2.3.2"
error-chain = "0.8.1"
maplit = "0.1"
matches = "0.1"

[dependencies.edn]
  path = "../edn"

[dependencies.mentat_core]
  path = "../core"

[dependencies.mentat_parser_utils]
  path = "../parser-utils"

[dependencies.mentat_query]
  path = "../query"
