[package]
name = "mentat_query_parser"
version = "0.0.1"
workspace = ".."

[dependencies]
combine = "2.3.2"
error-chain = { git = "https://github.com/rnewman/error-chain", branch = "rnewman/sync" }
maplit = "0.1"

[dependencies.edn]
  path = "../edn"

[dependencies.mentat_parser_utils]
  path = "../parser-utils"

[dependencies.mentat_query]
  path = "../query"
