[package]
name = "mentat_query_projector"
version = "0.0.1"
workspace = ".."

[dependencies]
failure = "0.1.1"
indexmap = "1"

[dependencies.rusqlite]
version = "0.13"
features = ["limits"]

[dependencies.core_traits]
path = "../core-traits"

[dependencies.edn]
path = "../edn"

[dependencies.mentat_core]
path = "../core"

[dependencies.mentat_db]
path = "../db"

[dependencies.db_traits]
path = "../db-traits"

[dependencies.mentat_sql]
path = "../sql"

[dependencies.mentat_query_algebrizer]
path = "../query-algebrizer"

[dependencies.mentat_query_pull]
path = "../query-pull"

[dependencies.query_pull_traits]
path = "../query-pull-traits"

[dependencies.query_projector_traits]
path = "../query-projector-traits"

[dependencies.mentat_query_sql]
path = "../query-sql"

