[package]
name = "mentat_query_pull"
version = "0.0.1"
workspace = ".."

[dependencies]
failure = "0.1.1"
failure_derive = "0.1.1"

[dependencies.rusqlite]
version = "0.13"
features = ["limits"]

[dependencies.mentat_core]
path = "../core"

[dependencies.core_traits]
path = "../core-traits"

[dependencies.mentat_db]
path = "../db"

[dependencies.mentat_query]
path = "../query"

[dependencies.mentat_query_algebrizer]
path = "../query-algebrizer"

[dependencies.mentat_query_sql]
path = "../query-sql"

[dependencies.mentat_sql]
path = "../sql"
