[package]
name = "mentat_query_pull"
version = "0.0.1"
workspace = ".."

[features]
sqlcipher = ["rusqlite/sqlcipher"]

[dependencies]
failure = "0.1.2"

[dependencies.query_pull_traits]
path = "../query-pull-traits"

[dependencies.rusqlite]
version = "0.13"
features = ["limits"]

[dependencies.edn]
path = "../edn"

[dependencies.mentat_core]
path = "../core"

[dependencies.core_traits]
path = "../core-traits"

[dependencies.mentat_db]
path = "../db"
