[package]
name = "mentat_query_sql"
version = "0.0.1"
workspace = ".."

[dependencies]

[dependencies.edn]
path = "../edn"

[dependencies.core_traits]
path = "../core-traits"

[dependencies.mentat_core]
path = "../core"

[dependencies.mentat_sql]
path = "../sql"

[dependencies.mentat_query_algebrizer]
path = "../query-algebrizer"
