[package]
name = "mentat_query_translator"
version = "0.0.1"
workspace = ".."

[dependencies]
failure = "0.1.1"
failure_derive = "0.1.1"

[dependencies.mentat_core]
path = "../core"

[dependencies.mentat_sql]
path = "../sql"

[dependencies.mentat_query]
path = "../query"

[dependencies.mentat_query_algebrizer]
path = "../query-algebrizer"

[dependencies.mentat_query_projector]
path = "../query-projector"

[dependencies.mentat_query_sql]
path = "../query-sql"
