[package]
name = "mentat_query_translator"
version = "0.0.1"
workspace = ".."

[dependencies]
error-chain = { git = "https://github.com/rnewman/error-chain", branch = "rnewman/sync" }

[dependencies.mentat_core]
path = "../core"

[dependencies.mentat_sql]
path = "../sql"

[dependencies.mentat_query]
path = "../query"

[dependencies.mentat_query_algebrizer]
path = "../query-algebrizer"

[dependencies.mentat_query_projector]
path = "../query-projector"

[dependencies.mentat_query_sql]
path = "../query-sql"
