[package]
name = "mentat_sql"
version = "0.0.1"
workspace = ".."

[dependencies]
error-chain = { git = "https://github.com/rnewman/error-chain", branch = "rnewman/sync" }
ordered-float = "0.5"

[dependencies.rusqlite]
version = "0.13"
features = ["limits"]

[dependencies.mentat_core]
path = "../core"
