[package]
name = "mentat_sql"
version = "0.0.1"
workspace = ".."

[dependencies]
failure = "0.1.1"
failure_derive = "0.1.1"
ordered-float = "0.5"

[dependencies.rusqlite]
version = "0.13"
features = ["limits"]

[dependencies.core_traits]
path = "../core-traits"

[dependencies.mentat_core]
path = "../core"
