[package]
name = "tolstoy_traits"
version = "0.0.1"
workspace = ".."

[lib]
name = "tolstoy_traits"
path = "lib.rs"

[features]
sqlcipher = ["rusqlite/sqlcipher"]

[dependencies]
failure = "0.1.1"
failure_derive = "0.1.1"
hyper = "0.11"
serde_json = "1.0"
uuid = { version = "0.5" }

[dependencies.db_traits]
path = "../db-traits"

[dependencies.rusqlite]
version = "0.13"
features = ["limits"]
