[package]
name = "mentat_tolstoy"
version = "0.0.1"
workspace = ".."
authors = ["Grisha Kruglov <gkruglov@mozilla.com>"]

[dependencies]
failure = "0.1.1"
futures = "0.1"
hyper = "0.11"
log = "0.4"
tokio-core = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_cbor = "0.8.2"
serde_derive = "1.0"
lazy_static = "0.2"
uuid = { version = "0.5", features = ["v4", "serde"] }

[dependencies.edn]
path = "../edn"

[dependencies.mentat_core]
path = "../core"

[dependencies.core_traits]
path = "../core-traits"

[dependencies.mentat_db]
path = "../db"

[dependencies.db_traits]
path = "../db-traits"

[dependencies.tolstoy_traits]
path = "../tolstoy-traits"

[dependencies.rusqlite]
version = "0.13"
features = ["limits"]
