[package]
name = "mentat_tx_parser"
version = "0.0.1"
workspace = ".."

[dependencies]
combine = "2.3.2"
error-chain = { git = "https://github.com/rnewman/error-chain", branch = "rnewman/sync" }

[dependencies.edn]
path = "../edn"

[dependencies.mentat_tx]
path = "../tx"

[dependencies.mentat_parser_utils]
path = "../parser-utils"
