[package]
name = "mentat_cli"
version = "0.0.1"

[lib]
name = "mentat_cli"
path = "src/mentat_cli/lib.rs"

[[bin]]
name = "mentat_cli"
doc = false
test = false

[dependencies]
combine = "2.2.2"
env_logger = "0.3"
getopts = "0.2"
lazy_static = "0.2"
linefeed = "0.4"
log = "0.3"
tabwriter = "1"
tempfile = "1.1"
termion = "1"
error-chain = { git = "https://github.com/rnewman/error-chain", branch = "rnewman/sync" }

[dependencies.rusqlite]
version = "0.12"
features = ["limits"]

[dependencies.mentat]
path = "../.."

[dependencies.mentat_parser_utils]
path = "../../parser-utils"

[dependencies.edn]
path = "../../edn"

[dependencies.mentat_query]
path = "../../query"

[dependencies.mentat_core]
path = "../../core"

[dependencies.mentat_db]
path = "../../db"
