[package]
name = "mentat_cli"
version = "0.0.1"

# Forward mentat's features.
[features]
default = ["bundled_sqlite3", "syncable"]
sqlcipher = ["mentat/sqlcipher"]
bundled_sqlite3 = ["mentat/bundled_sqlite3"]
syncable = ["mentat/syncable"]

[lib]
name = "mentat_cli"
path = "src/mentat_cli/lib.rs"

[[bin]]
name = "mentat_cli"
doc = false
test = false

[dependencies]
combine = "2.2.2"
env_logger = "0.5"
failure = "0.1.1"
failure_derive = "0.1.1"
getopts = "0.2"
lazy_static = "0.2"
linefeed = "0.5"
log = "0.4"
tabwriter = "1"
tempfile = "1.1"
termion = "1"
time = "0.1"

[dependencies.rusqlite]
version = "0.13"
features = ["limits"]

[dependencies.mentat]
path = "../.."
default-features = false

[dependencies.edn]
path = "../../edn"

[dependencies.mentat_query]
path = "../../query"

[dependencies.core_traits]
path = "../../core-traits"

[dependencies.mentat_db]
path = "../../db"
